--- a/fitnesstrackertest-Gradle/src/main/resources/templates/displayHomePage.html
+++ b/fitnesstrackertest-Gradle/src/main/resources/templates/displayHomePage.html
@@ -15,14 +15,42 @@
 			font-family: 'Oswald', sans-serif;
 
 		}
+
+		#headerBlock {
+			display: flex;
+			position: fixed;
+			top: 0;
+			left: 0;
+			right: 0;
+			z-index: 100;
+			height:35px;
+			background-color: #eaeaea;
+			justify-content:space-around;
+		}
+
+		#NavigationBlock {
+			display: flex;
+			justify-content:space-around;
+
+		}
 	</style>
 </head>
 
 <body>
 	<div id="headerBlock">
-
+		<div>MYFITNESSBUDDY</div>
+		<div id="NavigationBlock">
+			<a href="">Summary</a>
+			<a th:href="@{addWorkout}">Add Workout</a>
+			<a href="">Statistics</a>
+			<a href="">Profile</a>
+			<a href="">Log out</a>
+		</div>
 	</div>
-	<div id="mainBlock"></div>
+	<div id="mainBlock">
+		
+		
+	</div>
 
 </body>
 
